--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,26 @@
-<h1 class="text-center">JShop</h1>
+<main class="bg-dark">
 
-<section class="container">
-  <% @articles.each_slice(3) do |articles|%>
-    <section class="row">
-      <% articles.each do |article| %>
-        <article class="col-4">
-        <div class="card border border-white" style="width: 18rem;">
-          <img class="card-img-top" src="<%= article.image %>" alt="Card image cap" width=200 height=280>
-          <div class="card-body">
-            <h5 class="card-title"><%= article.title %></h5>
-             <p class="card-text"><%= article.description%></p>
-            <a href="#" class="btn btn-primary">Ver Artículo</a>
-          </div>
-        </div>   
-        </article>
-     <% end %>
-    </section>
-  <% end %>
-</section>  
+  <div class="bg-black bg-gradient mb-4">
+  <h1 class="text-center text-white">JStore</h1>
+  </div> 
+
+  <section class="container">
+    <% @articles.each_slice(3) do |articles|%>
+      <section class="row mb-4">
+        <% articles.each do |article| %>
+          <article class="col-4">       
+          <div class="card border border-white" style="width: 18rem;">
+            <img class="card-img-top" src="<%= article.image %>" alt="Card image cap" width=200 height=280>
+            <div class="card-body">
+              <h5 class="card-title"><%= article.title %></h5>
+              <p class="card-text"><%= article.description%></p>
+              <b class ="card-float">USD:<%= article.price%>$</b><br>
+              <%= link_to "Ver Artículo", article, class: "btn btn-outline-secondary mt-auto"%>
+            </div>
+          </div>   
+          </article>
+      <% end %>
+      </section>
+    <% end %>
+  </section>  
+</main>
