--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,8 +16,8 @@
               width=400>
           </div>
           <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-outline-dark me-3">Agregar al carrito</button>
-            <button class="btn btn-outline-dark">Añadir a favoritos</button>
+            <button class="btn btn-outline-success me-3">Agregar al carrito</button>
+            <button class="btn btn-outline-warning">Añadir a favoritos</button>
           </div>
         </article>
         <article id="Descripción" class="col-sm-6">
@@ -31,6 +31,11 @@
               "como es el procesa para la compra?")%>">
             WhatsApp
             </a>
+            <%= link_to "Editar Artículo", edit_article_path(@article), class: "btn btn-outline-primary mt-" %>
+            <%= link_to "Eliminar Artículo", article_path(@article), data: {
+              turbo_method: :delete,
+              turbo_confirm: "Seguro que quieres eliminar el artículo?"
+            }, class: "btn btn-outline-danger" %>
         </article>
       </div>
     </section>
